k8s-config/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: flask
          image: jethdeguzman/simple-flask-app
          ports:
            - containerPort: 5000
